# rust-actix-api-rest

./: .env  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/workflows/: rust.yml
migrations/: 20220402193833_init.sql
src/: create_user.rs  error.rs  health.rs  main.rs  repository.rs  user.rs
src/v1/: mod.rs  users.rs
