[package]
name = "my-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.132"
serde_json = "1.0.73"

[dev-dependencies]
actix-rt = "2"
mockall = "0.9.0"