[package]
name = "my-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.132"
serde_json = "1.0.73"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dev-dependencies]
actix-rt = "2"
mockall = "0.9.0"