[package]
name = "my-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-cors = "0.5.4"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.119"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "uuid", "chrono" ] }

[dev-dependencies]
actix-rt = "2"
mockall = "0.10"